--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,5 +1,5 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-\NM{} is a drop-in memory allocator replacement that is specially designed for the NUMA architecture. Applications can be linked to \NM{} directly, without the change of code and the recompilation. \NM{} is different from existing memory allocators, since it proposes  fine-grained memory management to accommodate the heterogeneity of both modern hardware and applications. It further proposes binding-based memory management and an interleaved heap to ensure locality and load balance. 
-Based on our extensive evaluation, \NM{} achieves a significantly better performance than other popular allocators on the NUMA architecture, up to $5.8\times$ faster than the default allocator.  \NM{} is available at https://github.com/availableuponacceptance. 
+\NM{} is a memory allocator that is specially designed for the NUMA architecture. Applications can be linked to \NM{} directly, without the change of code and the recompilation. \NM{} is different from existing memory allocators, since it proposes fine-grained memory management to accommodate the heterogeneity of both modern hardware and applications. It further proposes origin-based allocations to improve the locality, node-balanced thread binding and an interleaved heap to reduce the load imbalance, and explicit huge pages to employ the benefits of huge pages. 
+Based on our extensive evaluation, \NM{} achieves a significantly better performance than other popular allocators on the NUMA architecture, with 12\% performance speedup on average and up to $5.8\times$ faster. \NM{} is available at https://github.com/XXX. 
